hphp/hack/test/typecheck/typehole/T78983983.php.exp
File "T78983983.php", line 8, characters 9-9:
Type access is only valid for a class, `self`, or `this`. To relate type parameters and type constants, you likely want to use the 'with refinement' feature instead. (Naming[2129])
File "T78983983.php", line 12, characters 9-9:
Type access is only valid for a class, `self`, or `this`. To relate type parameters and type constants, you likely want to use the 'with refinement' feature instead. (Naming[2129])
